# docx2html

./: README.md  pyproject.toml
.github/workflows/: tests.yml
docx2html/: __init__.py  cli.py  parser.py  renderer_html.py  schema.py  tailwind_mapper.py  utils.py
docx2html.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: conftest.py  test_parser.py  test_parser_improvements.py  test_renderer.py  test_schema.py
